添加线性代数 第二节矩阵消元

--- a/01-方程组的几何解释/01-方程组的几何解释.md
+++ b/01-方程组的几何解释/01-方程组的几何解释.md
@@ -1,8 +1,6 @@
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
-
 # 一、方程组的几何解释
 
-## 1、Overview（概述）
+## 1、Overview (概述)
 
 本节主要介绍 <b>线性代数</b> 的基础。
 
